--- a/calibffrontendGH/package.json
+++ b/calibffrontendGH/package.json
@@ -2,7 +2,7 @@
   "name": "californiabeachfinder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://speckworks.github.io/calibffrontend",
+  "homepage": "http://speckworks.github.io/calibeachfinder",
   "dependencies": {
     "chart.js": "^2.9.3",
     "gh-pages": "^2.2.0",
